--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
             <id>clojure-compile</id>
             <configuration>
               <compilerId>clojure</compilerId>
+              <skip>true</skip>
             </configuration>
             <goals>
               <goal>compile</goal>
@@ -198,7 +199,7 @@
     <dependency>
       <groupId>org.cloudhoist</groupId>
       <artifactId>cljs</artifactId>
-      <version>0.1.0</version>
+      <version>0.1.1-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -206,6 +207,11 @@
       <artifactId>maven-compiler-plugin</artifactId>
       <version>2.3.2</version>
       <type>maven-plugin</type>
+    </dependency>
+    <dependency>
+      <groupId>org.mozilla</groupId>
+      <artifactId>rhino</artifactId>
+      <version>1.7R3</version>
     </dependency>
   </dependencies>
 
